added f1 score to tensorflow model

--- a/Arisa - Modeling-Classification.ipynb
+++ b/Arisa - Modeling-Classification.ipynb
@@ -196,232 +196,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c3a6b82c",
+   "metadata": {},
+   "source": [
+    "Pulling in Train and Test Sets"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "f3693092",
+   "execution_count": 1,
+   "id": "0d50fdd4",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Tile_ID</th>\n",
-       "      <th>Long2</th>\n",
-       "      <th>Lat2</th>\n",
-       "      <th>Long1</th>\n",
-       "      <th>Lat1</th>\n",
-       "      <th>Mid_lat</th>\n",
-       "      <th>Mid_long</th>\n",
-       "      <th>Stop_Signs</th>\n",
-       "      <th>Paving_historical</th>\n",
-       "      <th>Paving_future</th>\n",
-       "      <th>Bus_stop</th>\n",
-       "      <th>Collisions_Future</th>\n",
-       "      <th>Collisions_Historical</th>\n",
-       "      <th>RTTYP_I</th>\n",
-       "      <th>RTTYP_M</th>\n",
-       "      <th>RTTYP_O</th>\n",
-       "      <th>RTTYP_S</th>\n",
-       "      <th>RTTYP_U</th>\n",
-       "      <th>bin</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>36</td>\n",
-       "      <td>-122.514446</td>\n",
-       "      <td>37.779636</td>\n",
-       "      <td>-122.513306</td>\n",
-       "      <td>37.778732</td>\n",
-       "      <td>37.779184</td>\n",
-       "      <td>-122.513876</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>37</td>\n",
-       "      <td>-122.514446</td>\n",
-       "      <td>37.778732</td>\n",
-       "      <td>-122.513306</td>\n",
-       "      <td>37.777829</td>\n",
-       "      <td>37.778280</td>\n",
-       "      <td>-122.513876</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>151</td>\n",
-       "      <td>-122.513306</td>\n",
-       "      <td>37.779636</td>\n",
-       "      <td>-122.512166</td>\n",
-       "      <td>37.778732</td>\n",
-       "      <td>37.779184</td>\n",
-       "      <td>-122.512736</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>152</td>\n",
-       "      <td>-122.513306</td>\n",
-       "      <td>37.778732</td>\n",
-       "      <td>-122.512166</td>\n",
-       "      <td>37.777829</td>\n",
-       "      <td>37.778280</td>\n",
-       "      <td>-122.512736</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>153</td>\n",
-       "      <td>-122.513306</td>\n",
-       "      <td>37.777829</td>\n",
-       "      <td>-122.512166</td>\n",
-       "      <td>37.776925</td>\n",
-       "      <td>37.777377</td>\n",
-       "      <td>-122.512736</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Tile_ID       Long2       Lat2       Long1       Lat1    Mid_lat  \\\n",
-       "0       36 -122.514446  37.779636 -122.513306  37.778732  37.779184   \n",
-       "1       37 -122.514446  37.778732 -122.513306  37.777829  37.778280   \n",
-       "2      151 -122.513306  37.779636 -122.512166  37.778732  37.779184   \n",
-       "3      152 -122.513306  37.778732 -122.512166  37.777829  37.778280   \n",
-       "4      153 -122.513306  37.777829 -122.512166  37.776925  37.777377   \n",
-       "\n",
-       "     Mid_long  Stop_Signs  Paving_historical  Paving_future  Bus_stop  \\\n",
-       "0 -122.513876         0.0                0.0            0.0       0.0   \n",
-       "1 -122.513876         0.0                0.0            0.0       0.0   \n",
-       "2 -122.512736         0.0                0.0            0.0       0.0   \n",
-       "3 -122.512736         0.0                0.0            0.0       0.0   \n",
-       "4 -122.512736         0.0                0.0            0.0       0.0   \n",
-       "\n",
-       "   Collisions_Future  Collisions_Historical  RTTYP_I  RTTYP_M  RTTYP_O  \\\n",
-       "0                0.0                    0.0        0        1        0   \n",
-       "1                0.0                    0.0        0        1        0   \n",
-       "2                0.0                    0.0        0        1        0   \n",
-       "3                0.0                    0.0        0        1        0   \n",
-       "4                0.0                    0.0        0        1        0   \n",
-       "\n",
-       "   RTTYP_S  RTTYP_U  bin  \n",
-       "0        0        0    0  \n",
-       "1        0        0    0  \n",
-       "2        0        0    0  \n",
-       "3        0        0    0  \n",
-       "4        0        0    0  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'pd' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m tiles_train \u001b[38;5;241m=\u001b[39m \u001b[43mpd\u001b[49m\u001b[38;5;241m.\u001b[39mread_csv(\u001b[38;5;124mr\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m./Data/Tiles_TRAIN.csv\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m      2\u001b[0m x_train \u001b[38;5;241m=\u001b[39m tiles_train\u001b[38;5;241m.\u001b[39mdrop([\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbin_numeric\u001b[39m\u001b[38;5;124m'\u001b[39m], axis \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1\u001b[39m)\n\u001b[1;32m      3\u001b[0m y_train \u001b[38;5;241m=\u001b[39m tiles_train[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbin_numeric\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'pd' is not defined"
+     ]
     }
    ],
    "source": [
-    "tiles = pd.read_csv(r'./Data/Tiles_binned.csv')\n",
-    "tiles.head(5)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c3a6b82c",
-   "metadata": {},
-   "source": [
-    "Split into training and test"
+    "tiles_train = pd.read_csv(r'./Data/Tiles_TRAIN.csv')\n",
+    "x_train = tiles_train.drop(['bin_numeric'], axis = 1)\n",
+    "y_train = tiles_train['bin_numeric']\n",
+    "x_train.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "0d50fdd4",
-   "metadata": {
-    "tags": []
-   },
+   "execution_count": null,
+   "id": "d18a322c-14fa-44a5-89ec-8b6ae7411008",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, x_test, y_train, y_test = train_test_split(tiles[['Tile_ID','Collisions_Historical', 'Mid_lat','Mid_long', 'Stop_Signs', 'Paving_historical', 'Bus_stop','RTTYP_I','RTTYP_M','RTTYP_O','RTTYP_S','RTTYP_U']], \n",
-    "                                   tiles['bin'],\n",
-    "                                   random_state=104, \n",
-    "                                   test_size=0.20, \n",
-    "                                   shuffle=True)"
+    "tiles_test = pd.read_csv(r'./Data/Tiles_TEST.csv')\n",
+    "x_test = tiles_test.drop(['bin_numeric'], axis = 1)\n",
+    "y_test = tiles_test['bin_numeric']\n",
+    "x_test.head(5)"
    ]
   },
   {
@@ -580,7 +399,7 @@
     }
    ],
    "source": [
-    "street = np.asarray(x_train[['Collisions_Historical', 'Mid_lat','Mid_long', 'Stop_Signs', 'Paving_historical', 'Bus_stop','RTTYP_I','RTTYP_M','RTTYP_O','RTTYP_S','RTTYP_U']]).astype('float32')\n",
+    "street = np.asarray(x_train).astype('float32')\n",
     "street_mini = []\n",
     "for row in range(len(street)):\n",
     "    street_mini.append([[street[row]]])\n",
@@ -608,7 +427,7 @@
     }
    ],
    "source": [
-    "street_t = np.asarray(x_test[['Collisions_Historical', 'Mid_lat','Mid_long', 'Stop_Signs', 'Paving_historical', 'Bus_stop','RTTYP_I','RTTYP_M','RTTYP_O','RTTYP_S','RTTYP_U']]).astype('float32')\n",
+    "street_t = np.asarray(x_test).astype('float32')\n",
     "street_mini_t = []\n",
     "for row in range(len(street_t)):\n",
     "    street_mini_t.append([[street_t[row]]])\n",
