--- a/Arisa - Splitting Train Test.ipynb
+++ b/Arisa - Splitting Train Test.ipynb
@@ -579,6 +579,39 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 43,
+   "id": "74a2e0c7-8898-4254-bc2a-e950ecccf103",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "              Tile_ID\n",
+      "bins_numeric         \n",
+      "0                6644\n",
+      "1                 134\n",
+      "2                1201\n",
+      "3                 283\n",
+      "4                  26\n",
+      "5                   5\n",
+      "6                  61\n",
+      "7                  14\n",
+      "8                   4\n",
+      "9                   1\n",
+      "10                  3\n"
+     ]
+    }
+   ],
+   "source": [
+    "pivot = x_train.pivot_table(index=['bins_numeric'], values=['Tile_ID'], aggfunc=len)\n",
+    "print(pivot)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "id": "1e942aa3",
    "metadata": {},
