multi-class classification updates

--- a/Noriel - Train Test Split - Attempt 1.ipynb
+++ b/Noriel - Train Test Split - Attempt 1.ipynb
@@ -1783,9 +1783,9 @@
    },
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
-    "file_path = Path('/home/ubuntu/noriel/210_Capstone_Aditya_Arisa_Noriel/Data/x_train.csv')\n",
-    "x_train_df.to_csv(file_path,index=False)"
+    "#from pathlib import Path\n",
+    "#file_path = Path('/home/ubuntu/noriel/210_Capstone_Aditya_Arisa_Noriel/Data/x_train.csv')\n",
+    "#x_train_df.to_csv(file_path,index=False)"
    ]
   },
   {
