multi class trial and error

--- a/Noriel - Random Forest - Multi-Class Classification 0.ipynb
+++ b/Noriel - Random Forest - Multi-Class Classification 0.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "c56e69d7-74ee-4a3a-9063-e38357b2fd88",
+   "metadata": {},
+   "source": [
+    "**Random Forest**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a0eabcba-5ca5-4fa8-bde3-8224131c3a6a",
    "metadata": {},
    "source": [
@@ -10,12 +18,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "356025b8",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-22 18:21:02.692465: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-03-22 18:21:03.922618: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2023-03-22 18:21:03.922655: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2023-03-22 18:21:06.691620: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-03-22 18:21:06.691744: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-03-22 18:21:06.691757: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "import matplotlib\n",
@@ -53,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "id": "f3693092",
    "metadata": {
     "tags": []
@@ -254,7 +276,7 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "id": "0d50fdd4",
    "metadata": {
     "tags": []
@@ -297,6 +319,36 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "735cd809-2205-4638-8d93-1b529c82dfa8",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A    1646\n",
+      "B     304\n",
+      "C      72\n",
+      "D      43\n",
+      "E      11\n",
+      "F      10\n",
+      "G       4\n",
+      "I       2\n",
+      "H       2\n",
+      "K       1\n",
+      "Name: bin, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(y_test.value_counts())"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "bf220283",
    "metadata": {},
@@ -306,62 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "f5219d80-6920-4ecf-a617-74c6aaa49734",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x_train_len 8376\n",
-      "x_test_len 2095\n"
-     ]
-    }
-   ],
-   "source": [
-    "x_train_len = len(x_train)\n",
-    "x_test_len = len(x_test)\n",
-    "print('x_train_len', x_train_len)\n",
-    "print('x_test_len', x_test_len)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "a9df41b0-08e2-4eb7-8a4f-f0c537cba53c",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "698\n"
-     ]
-    }
-   ],
-   "source": [
-    "n = int(x_train_len/12)\n",
-    "print(n)\n",
-    "chunk1 = x_train['Tile_ID'][0:n]\n",
-    "chunk2 = x_train['Tile_ID'][n:2*n]\n",
-    "chunk3 = x_train['Tile_ID'][2*n:3*n]\n",
-    "chunk4 = x_train['Tile_ID'][3*n:2*n]\n",
-    "chunk5 = x_train['Tile_ID'][n:2*n]\n",
-    "chunk6 = x_train['Tile_ID'][n:2*n]\n",
-    "chunk7 = x_train['Tile_ID'][n:2*n]\n",
-    "chunk8 = x_train['Tile_ID'][n:2*n]\n",
-    "chunk9 = x_train['Tile_ID'][n:2*n]\n",
-    "chunk10 = x_train['Tile_ID'][n:2*n]\n",
-    "chunk11 = x_train['Tile_ID'][n:2*n]\n",
-    "chunk12 = x_train['Tile_ID'][n:2*n]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 5,
    "id": "9298e629",
    "metadata": {},
    "outputs": [],
@@ -382,7 +379,7 @@
     "    \n",
     "    data_mini = []\n",
     "    data_mini_test = []\n",
-    "    for id in chunk1:    \n",
+    "    for id in x_train['Tile_ID']:    \n",
     "                    \n",
     "        # read image and store as matrix            \n",
     "        # Index at the end makes all images the same size (they sometimes differ by 1 pixel)\n",
@@ -421,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "4d8f77ae",
    "metadata": {},
    "outputs": [],
@@ -431,97 +428,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "c00f2edb-7a9c-417a-9490-b8b9cfcb5846",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train  (698, 148, 188, 4)\n",
-      "test  (2095, 148, 188, 4)\n"
-     ]
-    }
-   ],
-   "source": [
-    "print('train ', np.shape(images_mini))\n",
-    "print('test ', np.shape(images_mini_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "508df63f-c9d4-4db7-a193-b291a4de9cdd",
+   "id": "c00f2edb-7a9c-417a-9490-b8b9cfcb5846",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
-    "temp=[]\n",
-    "for i in images_mini:\n",
-    "    for j in i:\n",
-    "        for k in j:\n",
-    "            x = [np.mean(j[0:3]), j[3]]\n",
-    "            temp.append(x)"
+    "print('train ', np.shape(images_mini))\n",
+    "print('test ', np.shape(images_mini_test))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "fe5f7079-511a-473e-bdad-9826bacc67d8",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([167., 165., 154.,  91.], dtype=float32)"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "images_mini[0][0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "4370614e-156b-4073-9998-0ddf6bb9a74a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8419     10993\n",
-       "10129    13338\n",
-       "7641     10163\n",
-       "5215      7523\n",
-       "7784     10314\n",
-       "         ...  \n",
-       "3863      6013\n",
-       "2267      4122\n",
-       "232        884\n",
-       "5557      7885\n",
-       "5797      8143\n",
-       "Name: Tile_ID, Length: 1047, dtype: int64"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -533,21 +449,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "8dce0686",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train  (8376, 1, 1, 52)\n",
-      "test  (2095, 1, 1, 52)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "street = np.asarray(x_train[['Tile_ID', 'Long2', 'Lat2', 'Long1', 'Lat1', 'Mid_lat', 'Mid_long',\n",
     "       'Stop_Signs', 'Paving_historical', 'Paving_future', 'Bus_stop',\n",
@@ -582,128 +489,289 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "c5275800-edf8-4225-a07c-998b25870208",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(8376, 111348)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_image_street = np.hstack(\n",
     "    (street_mini.reshape((8376,52)),\n",
-    "     images_mini.reshape(8376,148*188*4))\n",
+    "     images_mini.reshape(8376,1))\n",
     ")\n",
     "np.shape(input_image_street)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "0771ebca-a17e-4a7f-b8b6-0ebbf258a123",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2095, 111348)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_image_street_test = np.hstack(\n",
     "    (street_mini_test.reshape((2095,52)),\n",
-    "     images_mini_test.reshape(2095,148*188*4))\n",
+    "     images_mini_test.reshape(2095,1))\n",
     ")\n",
     "np.shape(input_image_street_test)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "095df0bf-7869-4ac4-9ac5-032417c1351e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(8376, 111296)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "cell_type": "markdown",
+   "id": "99ae0d0a-47df-45ce-8bd4-9c31ed9d0cc3",
+   "metadata": {},
    "source": [
-    "images_flattened = images_mini.reshape(8376,148*188*4)\n",
-    "np.shape(images_flattened)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "05c469e4-6c29-44ad-933a-a984b2d41c83",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([167., 165., 154., ..., 145., 106., 177.], dtype=float32)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "images_flattened[0]"
+    "Pre-processing Label Column"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "819cc9ea-e8b3-49bb-80f1-c361cdb67cb8",
+   "id": "a13e660c-d9ed-4991-ba6a-c0cece399b50",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from pathlib import Path\n",
-    "# file_path = Path('/home/ubuntu/noriel/210_Capstone_Aditya_Arisa_Noriel/Data/images_mini.csv')\n",
-    "# pd.DataFrame(input_image_street).to_csv(file_path,index=False)"
+    "y_train[0:5]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6261ad2-b296-498c-aec2-d137c8de58fe",
+   "id": "7217a2b4-a4fb-4407-8f08-cf72e15cdbfa",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "le = preprocessing.LabelEncoder()\n",
+    "le.fit(y_train)\n",
+    "y_train = le.transform(y_train)\n",
+    "le.fit(y_test)\n",
+    "y_test = le.transform(y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e009aa6-17b0-4b25-a570-aba1ce6100ae",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "y_train[0:5]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b77c3787-63c6-4417-a626-e29615e3ed26",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# from sklearn import preprocessing\n",
+    "# scaler = preprocessing.StandardScaler().fit(input_image_street)\n",
+    "# X_scaled = scaler.transform(input_image_street)\n",
+    "# X_scaled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94e4029c-9726-4105-bbb9-932ab1baad96",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# from sklearn.ensemble import RandomForestClassifier\n",
+    "# from sklearn.model_selection import GridSearchCV\n",
+    "# # Create the parameter grid based on the results of random search \n",
+    "# param_grid = {\n",
+    "#     'bootstrap': [True],'max_depth': [20,30,40, 100, 110],\n",
+    "#     'max_features': ['sqrt'],'min_samples_leaf': [5,10,15],\n",
+    "#     'min_samples_split': [40,50,60], 'n_estimators': [150, 200, 250]\n",
+    "# }\n",
+    "# # Create a based model\n",
+    "# rf = RandomForestClassifier()\n",
+    "# # Instantiate the grid search model\n",
+    "# grid_search = GridSearchCV(estimator = rf, param_grid = param_grid, \n",
+    "#                           cv = 3, n_jobs = -1, verbose = 2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdaff37d-b624-434a-9b5c-0c20630e075d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# grid_search.fit(X_scaled, y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9701c4cd-dfe9-4d74-a69b-b030194b187b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "# grid_search.best_params_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b9f4f0f7-a7dc-43f6-94db-d59f5b204b2f",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "rf_model = tfdf.keras.RandomForestModel()#categorical_algorithm = 'CART', num_trees=300, max_depth = 110)\n",
+    "\n",
+    "rf_model.fit(input_image_street,\n",
+    "    y_train,    \n",
+    "    epochs=1,\n",
+    "    verbose=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14110520-7657-467c-83af-ca78d8e431de",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "print(rf_model.summary())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5b594c40-eec6-4cff-afc6-c93870de0de5",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "##uncomment to show training log\n",
+    "rf_model.make_inspector().training_logs()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "38ab9678-981c-4728-9f5e-d4f1b06b5b4d",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "rf_model.make_inspector().evaluation()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8af3edc9-2e32-4bc8-8c5b-5bf3085d8060",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "logs = rf_model.make_inspector().training_logs()\n",
+    "\n",
+    "plt.plot([log.evaluation.num_examples for log in logs], [log.evaluation.loss for log in logs], label=\"training data\")\n",
+    "plt.xlabel(\"Number of trees\")\n",
+    "plt.ylabel(\"Loss\")\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b50d39f5-7211-436d-8355-6775818e613b",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "logs = rf_model.make_inspector().training_logs()\n",
+    "\n",
+    "plt.plot([log.evaluation.num_examples for log in logs], [log.evaluation.accuracy for log in logs], label=\"training data\")\n",
+    "plt.xlabel(\"Number of trees\")\n",
+    "plt.ylabel(\"Accuracy\")\n",
+    "plt.legend()\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7078a13f-031f-4516-befd-3e8bbad12679",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "#evaluate the model\n",
+    "rf_model.evaluate(input_image_street_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8227c76c-58ef-4dc8-a5d9-e6b0ab3048af",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "rf_model.predict(input_image_street_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94be5ae4-5e10-443a-a589-87386a3f493f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from pathlib import Path\n",
-    "# file_path = Path('/home/ubuntu/noriel/210_Capstone_Aditya_Arisa_Noriel/Data/images_mini_test.csv')\n",
-    "# pd.DataFrame(input_image_street_test).to_csv(file_path,index=False)"
+    "predicted_result = rf_model.predict(input_image_street_test)\n",
+    "test_values = []\n",
+    "for i in predicted_result: \n",
+    "    input_list = i\n",
+    "    max_value = max(input_list)\n",
+    "    index = [index for index, item in enumerate(input_list) if item == max_value]\n",
+    "    test_values.append(index[0])\n",
+    "print('macro f1: ', f1_score(y_test, test_values, average = 'macro' ))\n",
+    "print('f1 by class: ', f1_score(y_test, test_values, average = None ))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0cba1432-1065-4504-821e-e68ee93e139a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
