--- a/Noriel - Image Processing to CSV-Greyscale.ipynb
+++ b/Noriel - Image Processing to CSV-Greyscale.ipynb
@@ -10,12 +10,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "id": "356025b8",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-03-22 15:09:00.308045: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-03-22 15:09:00.446415: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2023-03-22 15:09:00.446440: I tensorflow/compiler/xla/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n",
+      "2023-03-22 15:09:01.225530: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-03-22 15:09:01.225636: W tensorflow/compiler/xla/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-03-22 15:09:01.225647: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+     ]
+    }
+   ],
    "source": [
     "import math\n",
     "import matplotlib\n",
@@ -53,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "id": "f3693092",
    "metadata": {
     "tags": []
@@ -254,7 +268,7 @@
        "[5 rows x 53 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "id": "0d50fdd4",
    "metadata": {
     "tags": []
@@ -306,9 +320,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "f5219d80-6920-4ecf-a617-74c6aaa49734",
-   "metadata": {},
+   "execution_count": 6,
+   "id": "01bde52d-4798-4d14-9e64-f9ae7e340df2",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -328,41 +344,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "id": "a9df41b0-08e2-4eb7-8a4f-f0c537cba53c",
+   "execution_count": 7,
+   "id": "4025ebc7-e386-403e-be7b-c7110afeb1a5",
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "698\n"
-     ]
+     "data": {
+      "text/plain": [
+       "523"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "n = int(x_train_len/12)\n",
-    "print(n)\n",
-    "chunk1 = x_train['Tile_ID'][0:n]\n",
-    "chunk2 = x_train['Tile_ID'][n:2*n]\n",
-    "chunk3 = x_train['Tile_ID'][2*n:3*n]\n",
-    "chunk4 = x_train['Tile_ID'][3*n:2*n]\n",
-    "chunk5 = x_train['Tile_ID'][n:2*n]\n",
-    "chunk6 = x_train['Tile_ID'][n:2*n]\n",
-    "chunk7 = x_train['Tile_ID'][n:2*n]\n",
-    "chunk8 = x_train['Tile_ID'][n:2*n]\n",
-    "chunk9 = x_train['Tile_ID'][n:2*n]\n",
-    "chunk10 = x_train['Tile_ID'][n:2*n]\n",
-    "chunk11 = x_train['Tile_ID'][n:2*n]\n",
-    "chunk12 = x_train['Tile_ID'][n:2*n]"
+    "int(x_train_len/16)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
-   "id": "9298e629",
+   "execution_count": 8,
+   "id": "8785e8df-9d7f-4143-b2e4-02c8a7c8410f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,150 +388,69 @@
     "    \n",
     "    data_mini = []\n",
     "    data_mini_test = []\n",
-    "    for id in chunk1:    \n",
+    "    for id in x_train['Tile_ID'][0:int(x_train_len/16)]:    \n",
     "                    \n",
     "        # read image and store as matrix            \n",
     "        # Index at the end makes all images the same size (they sometimes differ by 1 pixel)\n",
     "        image = tifffile.imread(IMAGE_PATH + str(id) + '.tif')[0:148, 0:188, :]\n",
     "        \n",
     "        #grayscale\n",
-    "        #for i in image:\n",
-    "        #    for j in i:\n",
-    "        #        data_mini.append([np.mean(j[0:3]), j[3]])\n",
+    "        for i in image:\n",
+    "            for j in i:\n",
+    "                data_mini.append([np.mean(j[0:3]), j[3]])\n",
     "        \n",
     "        # append to images\n",
-    "        data_mini.append(image)\n",
+    "        #data_mini.append(image)\n",
     " \n",
     "    # stack images and trasnform to array\n",
     "    images_mini = np.stack(data_mini)\n",
     "    \n",
-    "    for id in x_test['Tile_ID']:    \n",
+    "#     for id in x_test['Tile_ID']:    \n",
     "                    \n",
-    "        # read image and store as matrix            \n",
-    "        # Index at the end makes all images the same size (they sometimes differ by 1 pixel)\n",
-    "        image = tifffile.imread(IMAGE_PATH + str(id) + '.tif')[0:148, 0:188, :]\n",
+    "#         # read image and store as matrix            \n",
+    "#         # Index at the end makes all images the same size (they sometimes differ by 1 pixel)\n",
+    "#         image = tifffile.imread(IMAGE_PATH + str(id) + '.tif')[0:148, 0:188, :]\n",
     "        \n",
-    "        #grayscale\n",
-    "        #for i in image:\n",
-    "        #    for j in i:\n",
-    "        #        data_mini_test.append([np.mean(j[0:3]), j[3]])\n",
+    "#         #grayscale\n",
+    "#         for i in image:\n",
+    "#             for j in i:\n",
+    "#                 data_mini_test.append([np.mean(j[0:3]), j[3]])\n",
     "        \n",
-    "        # append to images\n",
-    "        data_mini_test.append(image)\n",
+    "#         # append to images\n",
+    "#         data_mini_test.append(image)\n",
     " \n",
     "    # stack images and trasnform to array\n",
-    "    images_mini_test = np.stack(data_mini_test)\n",
+    "    #images_mini_test = np.stack(data_mini_test)\n",
     "    \n",
-    "    return images_mini, images_mini_test"
+    "    return images_mini#, images_mini_test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
-   "id": "4d8f77ae",
+   "execution_count": null,
+   "id": "1c4677da-063e-4c29-b772-a7fb76b1bcd4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "images_mini, images_mini_test = preprocess_data_part1(IMAGE_PATH)"
+    "images_mini = preprocess_data_part1(IMAGE_PATH)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
-   "id": "c00f2edb-7a9c-417a-9490-b8b9cfcb5846",
+   "execution_count": null,
+   "id": "b5166575-8e36-4ef3-ba60-7251cdccb03d",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train  (698, 148, 188, 4)\n",
-      "test  (2095, 148, 188, 4)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print('train ', np.shape(images_mini))\n",
     "print('test ', np.shape(images_mini_test))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "508df63f-c9d4-4db7-a193-b291a4de9cdd",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "temp=[]\n",
-    "for i in images_mini:\n",
-    "    for j in i:\n",
-    "        for k in j:\n",
-    "            x = [np.mean(j[0:3]), j[3]]\n",
-    "            temp.append(x)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "id": "fe5f7079-511a-473e-bdad-9826bacc67d8",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([167., 165., 154.,  91.], dtype=float32)"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "images_mini[0][0][0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "4370614e-156b-4073-9998-0ddf6bb9a74a",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "8419     10993\n",
-       "10129    13338\n",
-       "7641     10163\n",
-       "5215      7523\n",
-       "7784     10314\n",
-       "         ...  \n",
-       "3863      6013\n",
-       "2267      4122\n",
-       "232        884\n",
-       "5557      7885\n",
-       "5797      8143\n",
-       "Name: Tile_ID, Length: 1047, dtype: int64"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "57135842",
+   "id": "717bd86d-5031-4095-ae9d-29ca4b84efe9",
    "metadata": {},
    "source": [
     "Street Data Pre-Processing"
@@ -533,21 +458,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "8dce0686",
+   "execution_count": null,
+   "id": "7afc423b-3700-495f-8a44-860371f47610",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "train  (8376, 1, 1, 52)\n",
-      "test  (2095, 1, 1, 52)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "street = np.asarray(x_train[['Tile_ID', 'Long2', 'Lat2', 'Long1', 'Lat1', 'Mid_lat', 'Mid_long',\n",
     "       'Stop_Signs', 'Paving_historical', 'Paving_future', 'Bus_stop',\n",
@@ -582,128 +498,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "c5275800-edf8-4225-a07c-998b25870208",
+   "execution_count": null,
+   "id": "12202ae4-49dc-4b0d-991b-32c598265165",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(8376, 111348)"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_image_street = np.hstack(\n",
     "    (street_mini.reshape((8376,52)),\n",
-    "     images_mini.reshape(8376,148*188*4))\n",
+    "     images_mini.reshape(8376,2))\n",
     ")\n",
     "np.shape(input_image_street)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "0771ebca-a17e-4a7f-b8b6-0ebbf258a123",
+   "execution_count": null,
+   "id": "b2026347-0cdf-4af0-b22c-6e19f5a35f14",
    "metadata": {
     "tags": []
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(2095, 111348)"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_image_street_test = np.hstack(\n",
     "    (street_mini_test.reshape((2095,52)),\n",
-    "     images_mini_test.reshape(2095,148*188*4))\n",
+    "     images_mini_test.reshape(2095,2))\n",
     ")\n",
     "np.shape(input_image_street_test)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "095df0bf-7869-4ac4-9ac5-032417c1351e",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(8376, 111296)"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "images_flattened = images_mini.reshape(8376,148*188*4)\n",
-    "np.shape(images_flattened)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "id": "05c469e4-6c29-44ad-933a-a984b2d41c83",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([167., 165., 154., ..., 145., 106., 177.], dtype=float32)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "images_flattened[0]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": null,
-   "id": "819cc9ea-e8b3-49bb-80f1-c361cdb67cb8",
-   "metadata": {},
+   "id": "e3651bc3-6573-4a3d-979d-c292a04823e1",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# from pathlib import Path\n",
-    "# file_path = Path('/home/ubuntu/noriel/210_Capstone_Aditya_Arisa_Noriel/Data/images_mini.csv')\n",
+    "# file_path = Path('/home/ubuntu/noriel/210_Capstone_Aditya_Arisa_Noriel/Data/images_mini_greyscale.csv')\n",
     "# pd.DataFrame(input_image_street).to_csv(file_path,index=False)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a6261ad2-b296-498c-aec2-d137c8de58fe",
-   "metadata": {},
+   "id": "1528abd7-ec24-4e42-91fe-f3d08edba0ae",
+   "metadata": {
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "# from pathlib import Path\n",
-    "# file_path = Path('/home/ubuntu/noriel/210_Capstone_Aditya_Arisa_Noriel/Data/images_mini_test.csv')\n",
+    "# file_path = Path('/home/ubuntu/noriel/210_Capstone_Aditya_Arisa_Noriel/Data/images_mini_test_greyscale.csv')\n",
     "# pd.DataFrame(input_image_street_test).to_csv(file_path,index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "71311bf8-68b4-4625-a7f3-85e7e59d95be",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
