Aditya - Pls Check

--- a/Noriel - Random Forest - Multi-Class Classification 0.ipynb
+++ b/Noriel - Random Forest - Multi-Class Classification 0.ipynb
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4d8f77ae",
    "metadata": {},
    "outputs": [],
@@ -428,12 +428,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "c00f2edb-7a9c-417a-9490-b8b9cfcb5846",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train  (8376, 148, 188, 4)\n",
+      "test  (2095, 148, 188, 4)\n"
+     ]
+    }
+   ],
    "source": [
     "print('train ', np.shape(images_mini))\n",
     "print('test ', np.shape(images_mini_test))"
@@ -449,12 +458,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "8dce0686",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train  (8376, 1, 1, 52)\n",
+      "test  (2095, 1, 1, 52)\n"
+     ]
+    }
+   ],
    "source": [
     "street = np.asarray(x_train[['Tile_ID', 'Long2', 'Lat2', 'Long1', 'Lat1', 'Mid_lat', 'Mid_long',\n",
     "       'Stop_Signs', 'Paving_historical', 'Paving_future', 'Bus_stop',\n",
@@ -489,12 +507,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "c5275800-edf8-4225-a07c-998b25870208",
    "metadata": {
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "cannot reshape array of size 932215296 into shape (8376,1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m input_image_street \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mhstack(\n\u001b[1;32m      2\u001b[0m     (street_mini\u001b[38;5;241m.\u001b[39mreshape((\u001b[38;5;241m8376\u001b[39m,\u001b[38;5;241m52\u001b[39m)),\n\u001b[0;32m----> 3\u001b[0m      \u001b[43mimages_mini\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mreshape\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m8376\u001b[39;49m\u001b[43m,\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m)\n\u001b[1;32m      4\u001b[0m )\n\u001b[1;32m      5\u001b[0m np\u001b[38;5;241m.\u001b[39mshape(input_image_street)\n",
+      "\u001b[0;31mValueError\u001b[0m: cannot reshape array of size 932215296 into shape (8376,1)"
+     ]
+    }
+   ],
    "source": [
     "input_image_street = np.hstack(\n",
     "    (street_mini.reshape((8376,52)),\n",
